# Transaction-Fraud-Detection

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
notebooks/: 01_eda.ipynb
src/fraud_detection/: config.py
src/fraud_detection/data/: loader.py  schema.py
src/fraud_detection/evaluation/: evaluate.py  panel.py
src/fraud_detection/features/: pipeline.py
src/fraud_detection/monitoring/: prediction_log.py
src/fraud_detection/serving/: app.py  schemas.py
src/fraud_detection/training/: train.py
tests/: test_data.py  test_evaluation.py  test_features.py  test_serving.py  test_training.py
