[tool.poetry]
name = "alireza-fraud-detection"
version = "0.1.0"
description = "Production-style fraud detection ML system"
authors = ["Alirezaemami97"]
readme = "README.md"
packages = [{include = "fraud_detection", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
lightgbm = "^4.3"
scikit-learn = "^1.5"
pandas = "^2.2"
pydantic = "^2.7"
mlflow = "^2.13"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
evidently = "^0.4"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.4"
mypy = "^1.10"
httpx = "^0.27"
types-pyyaml = "^6.0.12.20260518"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
